--- a/website/templates/auction_detail.html
+++ b/website/templates/auction_detail.html
@@ -94,6 +94,8 @@
             <p style="color: black;"><strong>Current Bid:</strong> {{ auction_detail.current_bid }}</p>
             <p style="color: black;"><strong>Address:</strong> {{ auction_detail.address }}</p>
 
+            <p style="color: black;"><strong>Approx. Value:</strong> {{ predicted_value }} Tk</p>
+
           <!-- Add buttons for bidding or other actions as needed -->
         </div>
       </div>
